# FreeRTOS-SMP-Demos

./: .gitignore  .gitmodules  Porting-to-FreeRTOS-SMP-Kernel.md  Quick_Start_Guide.url  README.md  SMP.md
.github/scripts/common/: requirements.txt
FreeRTOS/: README.md
FreeRTOS/Demo/: readme.txt
FreeRTOS/Demo/CORTEX_A53_64-bit_UltraScale_MPSoC/RTOSDemo_A53/src/: FreeRTOSConfig.h  FreeRTOS_tick_config.c  main.c
FreeRTOS/Demo/CORTEX_M0+_RP2040/: CMakeLists.txt  README.md
FreeRTOS/Demo/Common/: ReadMe.txt
FreeRTOS/Demo/Common/Minimal/: BlockQ.c  TimerDemo.c  dynamic.c
FreeRTOS/Demo/XCORE.AI_xClang/: README.md
FreeRTOS/Demo/XCORE.AI_xClang/RTOSDemo/: Makefile
FreeRTOS/Demo/XCORE.AI_xClang/RTOSDemo/src/: FreeRTOSConfig.h  XCORE-AI-EXPLORER.xn  config.xscope  test.c  testing_main.h
FreeRTOS/Demo/XCORE.AI_xClang/lib_rtos_support/api/: rtos_cores.h  rtos_interrupt.h  rtos_irq.h  rtos_macros.h  rtos_printf.h  rtos_support.h  rtos_time.h
FreeRTOS/Demo/XCORE.AI_xClang/lib_rtos_support/src/: rtos_cores.c  rtos_interrupt.c  rtos_interrupt_impl.h  rtos_time.c
FreeRTOS/Demo/XCORE200_XCC/: .gitignore  README
FreeRTOS/Demo/XCORE200_XCC/RTOSDemo/: Makefile
FreeRTOS/Demo/XCORE200_XCC/RTOSDemo/src/: FreeRTOSConfig.h  MIC-ARRAY-1V3.xn  main.xc  test.c  testing_main.h
FreeRTOS/Demo/XCORE200_XCC/lib_rtos_support/: .cproject  module_build_info
FreeRTOS/Demo/XCORE200_XCC/lib_rtos_support/api/: rtos_cores.h  rtos_interrupt.h  rtos_irq.h  rtos_locks.h  rtos_macros.h  rtos_printf.h  rtos_support.h  rtos_time.h
FreeRTOS/Demo/XCORE200_XCC/lib_trycatch/: .cproject  .project  module_build_info
FreeRTOS/Demo/XCORE200_XCC/lib_xassert/: .cproject  .project  .xproject  LICENSE.txt  module_build_info
FreeRTOS/Demo/XCORE200_XCC/lib_xcore_c/: .cproject  .project  .xproject  LICENSE.txt  module_build_info
FreeRTOS/Demo/XCORE200_xClang/: README
FreeRTOS/Demo/XCORE200_xClang/RTOSDemo/: .project  Makefile
FreeRTOS/Demo/XCORE200_xClang/lib_rtos_support/: LICENSE.txt
FreeRTOS/Demo/XCOREAI_XCC/: README
FreeRTOS/Demo/XCOREAI_XCC/RTOSDemo/: Makefile
FreeRTOS/Demo/XCOREAI_xClang/: README  README.md
FreeRTOS/Demo/XCOREAI_xClang/RTOSDemo/: .cproject  Makefile
FreeRTOS/Demo/XCOREAI_xClang/lib_rtos_support/: .project
FreeRTOS/Demo/rpi_pico/: CMakeLists.txt  FreeRTOSConfig.h  Readme.md  source.c  source.h  workspace.code-workspace
(+81 files in other folders)
